--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </div>
     <div class="wrapper flex">
-        <div>
+        <div class="main-main">
             <div class="maininfo">
                 <article>
                     <h1>Компанія “Хата Плюс”</h1>
