--- a/price.html
+++ b/price.html
@@ -59,70 +59,74 @@
     </header>
     <div class="wrapper">
         <main>
-            <table>
-                <h2>Ціни на послуги тимчасового проживання</h2>
+            <h2>Ціни на послуги тимчасового проживання</h2>
 
 
-                <p>Кожен котедж оснащений комфортабельними меблями, супутниковим ТБ, душем, туалетом, холодильником,
-                    Wi-Fi-зоною.
-                    Послуга може бути надана кожному з наших гостей, незалежно від терміну проживання в готелі та
-                    категорії обраного номера.</p>
+            <p>Кожен котедж оснащений комфортабельними меблями, супутниковим ТБ, душем, туалетом, холодильником,
+                Wi-Fi-зоною.
+                Послуга може бути надана кожному з наших гостей, незалежно від терміну проживання в готелі та
+                категорії обраного номера.</p>
+            <div class="table">
 
+                <table>
+    
+    
+                    <thead>
+                        <tr>
+                            <td>Назва котеджу</td>
+                            <td>Загальна площа м.кв.</td>
+                            <td>Кількість кімнат</td>
+                            <td>Гараж</td>
+                            <td>Ціна</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Hamilton Paradise</td>
+                            <td>392</td>
+                            <td>5</td>
+                            <td>2</td>
+                            <td>45 000 $</td>
+                        </tr>
+                        <tr>
+                            <td>Montreal Hourse House</td>
+                            <td>295</td>
+                            <td>3</td>
+                            <td>1</td>
+                            <td>29 750 $</td>
+                        </tr>
+                        <tr>
+                            <td>Edmenton</td>
+                            <td>338</td>
+                            <td>2</td>
+                            <td>2</td>
+                            <td>53 200 $</td>
+                        </tr>
+                        <tr>
+                            <td>Calgary Skyliner</td>
+                            <td>249</td>
+                            <td>2</td>
+                            <td>1</td>
+                            <td>31 000 $</td>
+                        </tr>
+                        <tr>
+                            <td>Quebec Enterprices</td>
+                            <td>392</td>
+                            <td>4</td>
+                            <td>2</td>
+                            <td>110 000 $</td>
+                        </tr>
+                        <tr>
+                            <td>Alberta Maria</td>
+                            <td>349</td>
+                            <td>1</td>
+                            <td>3</td>
+                            <td>67 500 $</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
 
-                <thead>
-                    <tr>
-                        <td>Назва котеджу</td>
-                        <td>Загальна площа м.кв.</td>
-                        <td>Кількість кімнат</td>
-                        <td>Гараж</td>
-                        <td>Ціна</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Hamilton Paradise</td>
-                        <td>392</td>
-                        <td>5</td>
-                        <td>2</td>
-                        <td>45 000 $</td>
-                    </tr>
-                    <tr>
-                        <td>Montreal Hourse House</td>
-                        <td>295</td>
-                        <td>3</td>
-                        <td>1</td>
-                        <td>29 750 $</td>
-                    </tr>
-                    <tr>
-                        <td>Edmenton</td>
-                        <td>338</td>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>53 200 $</td>
-                    </tr>
-                    <tr>
-                        <td>Calgary Skyliner</td>
-                        <td>249</td>
-                        <td>2</td>
-                        <td>1</td>
-                        <td>31 000 $</td>
-                    </tr>
-                    <tr>
-                        <td>Quebec Enterprices</td>
-                        <td>392</td>
-                        <td>4</td>
-                        <td>2</td>
-                        <td>110 000 $</td>
-                    </tr>
-                    <tr>
-                        <td>Alberta Maria</td>
-                        <td>349</td>
-                        <td>1</td>
-                        <td>3</td>
-                        <td>67 500 $</td>
-                    </tr>
-                </tbody>
-            </table>
             <p>Час заселення з 14-00, виїзд до 12-00.
                 Можлива погодинна оренда котеджу (мінімальний час оренди - 5 днів).</p>
             <a class="rules" href="#">Ознайомитись з правилами проживання</a>
