--- a/price.html
+++ b/price.html
@@ -15,7 +15,11 @@
         <div class="header-menu">
 
             <div class="wrapper flex">
-
+                <div class="burger-menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
                 <div class="menu">
                     <ul class="flex">
                         <li><a href="/">Головна</a></li>
@@ -62,7 +66,7 @@
             <h2>Ціни на послуги тимчасового проживання</h2>
 
 
-            <p>Кожен котедж оснащений комфортабельними меблями, супутниковим ТБ, душем, туалетом, холодильником,
+            <p class="time">Кожен котедж оснащений комфортабельними меблями, супутниковим ТБ, душем, туалетом, холодильником,
                 Wi-Fi-зоною.
                 Послуга може бути надана кожному з наших гостей, незалежно від терміну проживання в готелі та
                 категорії обраного номера.</p>
@@ -127,7 +131,7 @@
                 </table>
             </div>
 
-            <p>Час заселення з 14-00, виїзд до 12-00.
+            <p class="time">Час заселення з 14-00, виїзд до 12-00.
                 Можлива погодинна оренда котеджу (мінімальний час оренди - 5 днів).</p>
             <a class="rules" href="#">Ознайомитись з правилами проживання</a>
 
