--- a/contacts.html
+++ b/contacts.html
@@ -17,7 +17,11 @@
         <div class="header-menu">
 
             <div class="wrapper flex">
-
+                <div class="burger-menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
                 <div class="menu">
                     <ul class="flex">
                         <li><a href="/">Головна</a></li>
