--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
     <div class="header-menu">
         <div class="wrapper flex">
+            <div class="burger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <div class="menu">
                 <ul class="flex">
                     <li><a href="/">Головна</a></li>
@@ -170,27 +175,32 @@
 <footer>
     <div class="footer">
         <div class="wrapper flex">
-            <div class="footer-info1">
+            <div class="footer-info1 info">
                 <ul>
-                    <li><a href="#">Головна</a></li>
+                    <li><a href="#">Будинки</a></li>
+                    <li><a href="#">Інфраструктура</a></li>
+                    <li><a href="#">Сервіс</a></li>
+                    <li><a href="#">Новини</a></li>
+                </ul>
+            </div>
+            <div class="footer-info2 info">
+                <ul>
                     <li><a href="#">Про компанію</a></li>
-                    <li><a href="#">Наші будівлі</a></li>
-                    <li><a href="#">Акції</a></li>
+                    <li><a href="#">Страхування</a></li>
                     <li><a href="#">Контакти</a></li>
                 </ul>
             </div>
-            <div class="footer-info2">
-                <ul>
-                    <li><a href="#">Політика конфіденційності</a></li>
-                    <li><a href="#">Угода користувача</a></li>
-                    <li><a href="#">Повернення товару</a></li>
-                </ul>
+            <div class="contacts flex">
+                <a class="icon" href="tel:380971002525">+38(097) 100-25-25</a>
+                <a href="tel:380971002525">+38(097) 100-25-25</a>
             </div>
-            <ul class="social flex">
-                <li><a href="#" class="fb"></a></li>
-                <li><a href="#" class="tw"></a></li>
-                <li><a href="#" class="in"></a></li>
-            </ul>
+            <div class="email flex">
+                <a class="mail" href="#">hataplus@hata.com.ua</a>
+                <a class="email1 skype" href="">hataplus</a>
+            </div>
+        </div>
+        <div class="footer-bottom ">
+            <p>© Будівельна компанія “Хата Плюс” 2018.</p>
         </div>
     </div>
 </footer>
