adapt-full-versi

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="uk">
 
 <head>
+    
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -204,6 +205,7 @@
         </div>
     </div>
 </footer>
+<script src="script.js"></script>
 </body>
 
 </html>
