--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 
 <head>
-    
+
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    
+
     <div class="header-menu">
         <div class="wrapper flex">
             <div class="burger-menu">
@@ -22,7 +22,7 @@
                 <span></span>
             </div>
             <div class="menu">
-                <ul class="flex">
+                <ul class="menu-full flex">
                     <li><a href="/">Головна</a></li>
                     <li><a href="#">Про компанію</a></li>
                     <li><a href="price.html">Наші будівлі</a></li>
@@ -55,157 +55,169 @@
             </div>
         </div>
     </div>
-</header>
+    </header>
 
-<main>
-    <div class="banner">
-        <div class="text">
-            <p class="text1">Пропозиція місяця</p>
-            <p class="text2">Ми пропонуємо великий вибір котеджів “під ключ” за самими низькими цінами!</p>
-            <p class="text3"><b>5999</b> грн / м<sup>2</sup></p>
-        </div>
-    </div>
-    <div class="wrapper flex">
-        <div class="main-main">
-            <div class="maininfo">
-                <article>
-                    <h1>Компанія “Хата Плюс”</h1>
-                </article>
-                <p>Напевно кожен з нас не раз думав про те, щоб купити будинок котедж і насолоджуватися життям в гармонії з природою. Дійсно, для багатьох жителів мегаполісу заміська нерухомість під містом стала справжньою віддушиною і порятунком від сумній життя в багатоповерхівках спальних районів.</p>
-                <p>Крім цього, заміські котеджі “Хата Плюс” від забудовника — це найбільш вигідна цінова пропозиція по співвідношенню площа / вартість, оскільки у вартість домоволодіння входить також земельна ділянка, на якому можна не тільки посадити сад, але облаштувати зону відпочинку, спорудити сауну, поставити альтанку і барбекю.</p>
-                <a href="#">Детальніше про нас</a>
-                <hr>
+    <main>
+        <div class="banner">
+            <div class="text">
+                <p class="text1">Пропозиція місяця</p>
+                <p class="text2">Ми пропонуємо великий вибір котеджів “під ключ” за самими низькими цінами!</p>
+                <p class="text3"><b>5999</b> грн / м<sup>2</sup></p>
             </div>
+        </div>
+        <div class="wrapper flex">
+            <div class="main-main">
+                <div class="maininfo">
+                    <article>
+                        <h1>Компанія “Хата Плюс”</h1>
+                    </article>
+                    <p>Напевно кожен з нас не раз думав про те, щоб купити будинок котедж і насолоджуватися життям в
+                        гармонії з природою. Дійсно, для багатьох жителів мегаполісу заміська нерухомість під містом
+                        стала справжньою віддушиною і порятунком від сумній життя в багатоповерхівках спальних районів.
+                    </p>
+                    <p>Крім цього, заміські котеджі “Хата Плюс” від забудовника — це найбільш вигідна цінова пропозиція
+                        по співвідношенню площа / вартість, оскільки у вартість домоволодіння входить також земельна
+                        ділянка, на якому можна не тільки посадити сад, але облаштувати зону відпочинку, спорудити
+                        сауну, поставити альтанку і барбекю.</p>
+                    <a href="#">Детальніше про нас</a>
+                    <hr>
+                </div>
 
-            <div class="popular-project">
-                <h2>Популярні проекти</h2>
-                <div class="project flex">
-                    <figure class="edmonton house">
-                        <img src="img/Edmonton.jpg" alt="">
+                <div class="popular-project">
+                    <h2>Популярні проекти</h2>
+                    <div class="project flex">
                         <a href="edmonton.html">
-                            <h2>EDMONTON (338 м<sup>2</sup>)</h2>
+                            <figure class="edmonton house">
+                                <img src="img/Edmonton.jpg" alt="">
+                                <figcaption>
+                                    <h2>EDMONTON (338 м<sup>2</sup>)</h2>
+                                    <p>Загальна площа будови: 312 м<sup>2</sup></p>
+                                    <p>Кількість спалень: 4</p>
+                                    <p>Гараж: 2 авто</p>
+                                </figcaption>
+                            </figure>
                         </a>
-                        <p>Загальна площа будови: 312 м<sup>2</sup></p>
-                        <p>Кількість спалень: 4</p>
-                        <p>Гараж: 2 авто</p>
-                    </figure>
 
-                    <figure class="house Montreal">
-                        <img src="img/Montreal.jpg" alt="">
                         <a href="#">
-                            <h2>MONTREAL (332 м<sup>2</sup>)</h2>
+                            <figure class="house Montreal">
+                                <img src="img/Montreal.jpg" alt="">
+                                <figcaption>
+                                    <h2>MONTREAL (332 м<sup>2</sup>)</h2>
+                                    <p>Загальна площа будови: 290 м<sup>2</sup></p>
+                                    <p>Кількість спалень: 3</p>
+                                    <p>Гараж: 2 авто</p>
+                                </figcaption>
+                            </figure>
                         </a>
-                        <p>Загальна площа будови: 290 м<sup>2</sup></p>
-                        <p>Кількість спалень: 3</p>
-                        <p>Гараж: 2 авто</p>
-                    </figure>
-                    <figure class="calgary house">
-                        <img src="img/Calgary.jpg" alt="">
                         <a href="#">
-                            <h2>CALGARY (294 м<sup>2</sup>)</h2>
+                            <figure class="calgary house">
+                                <img src="img/Calgary.jpg" alt="">
+                                <figcaption>
+                                    <h2>CALGARY (294 м<sup>2</sup>)</h2>
+                                    <p>Загальна площа будови: 272 м<sup>2</sup></p>
+                                    <p>Кількість спалень: 3</p>
+                                    <p>Гараж: 2 авто</p>
+                                </figcaption>
+                            </figure>
                         </a>
-                        <p>Загальна площа будови: 272 м<sup>2</sup></p>
-                        <p>Кількість спалень: 3</p>
-                        <p>Гараж: 2 авто</p>
-                    </figure>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <aside>
-            <div class="category-project">
-                <p>Категорії проектів</p>
-                <nav>
+            <aside>
+                <div class="category-project">
+                    <p>Категорії проектів</p>
+                    <nav>
+                        <ul>
+                            <li><a class="proga" href="#">Генеральний план</a>
+                                <ul>
+                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="proga" href="#">Навколишнє середовище</a>
+                                <ul>
+                                    <li><a href="#">Продані</a></li>
+                                    <li><a href="#">Заброньованні</a></li>
+                                    <li><a href="#">В процесі будівництва</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="proga" href="#">Умови придбання</a>
+                                <ul>
+                                    <li><a href="#">Lorem</a></li>
+                                    <li><a href="#">Lorem, ipsum.</a></li>
+                                    <li><a href="#">Lorem, ipsum.</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="proga" href="#">Загородні котеджі</a>
+                                <ul>
+                                    <li><a href="#">Lorem, ipsum.</a></li>
+                                    <li><a href="#">Lorem, ipsum.</a></li>
+                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="proga" href="#">Інфраструктура</a>
+                                <ul>
+                                    <li><a href="#">Lorem, ipsum.</a></li>
+                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="proga" href="#">Готові будинки</a>
+                                <ul>
+                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="proga" href="#">Проекти бань</a>
+                                <ul>
+                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                    <li><a href="#">Lorem, ipsum dolor.</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </aside>
+        </div>
+    </main>
+
+    <footer>
+        <div class="footer">
+            <div class="wrapper flex">
+                <div class="footer-info1 info">
                     <ul>
-                        <li><a class="proga" href="#">Генеральний план</a>
-                            <ul>
-                                <li><a href="#">Lorem, ipsum dolor.</a></li>
-                                <li><a href="#">Lorem, ipsum dolor.</a></li>
-                                <li><a href="#">Lorem, ipsum dolor.</a></li>
-                            </ul>
-                        </li>
-                        <li><a class="proga" href="#">Навколишнє середовище</a>
-                            <ul>
-                                <li><a href="#">Продані</a></li>
-                                <li><a href="#">Заброньованні</a></li>
-                                <li><a href="#">В процесі будівництва</a></li>
-                            </ul>
-                        </li>
-                        <li><a class="proga" href="#">Умови придбання</a>
-                            <ul>
-                                <li><a href="#">Lorem</a></li>
-                                <li><a href="#">Lorem, ipsum.</a></li>
-                                <li><a href="#">Lorem, ipsum.</a></li>
-                            </ul>
-                        </li>
-                        <li><a class="proga" href="#">Загородні котеджі</a>
-                            <ul>
-                                <li><a href="#">Lorem, ipsum.</a></li>
-                                <li><a href="#">Lorem, ipsum.</a></li>
-                                <li><a href="#">Lorem, ipsum dolor.</a></li>
-                            </ul>
-                        </li>
-                        <li><a class="proga" href="#">Інфраструктура</a>
-                            <ul>
-                                <li><a href="#">Lorem, ipsum.</a></li>
-                                <li><a href="#">Lorem, ipsum dolor.</a></li>
-                                <li><a href="#">Lorem, ipsum dolor.</a></li>
-                            </ul>
-                        </li>
-                        <li><a class="proga" href="#">Готові будинки</a>
-                            <ul>
-                                <li><a href="#">Lorem, ipsum dolor.</a></li>
-                                <li><a href="#">Lorem, ipsum dolor.</a></li>
-                                <li><a href="#">Lorem, ipsum dolor.</a></li>
-                            </ul>
-                        </li>
-                        <li><a class="proga" href="#">Проекти бань</a>
-                            <ul>
-                                <li><a href="#">Lorem, ipsum dolor.</a></li>
-                                <li><a href="#">Lorem, ipsum dolor.</a></li>
-                                <li><a href="#">Lorem, ipsum dolor.</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="#">Будинки</a></li>
+                        <li><a href="#">Інфраструктура</a></li>
+                        <li><a href="#">Сервіс</a></li>
+                        <li><a href="#">Новини</a></li>
                     </ul>
-                </nav>
+                </div>
+                <div class="footer-info2 info">
+                    <ul>
+                        <li><a href="#">Про компанію</a></li>
+                        <li><a href="#">Страхування</a></li>
+                        <li><a href="#">Контакти</a></li>
+                    </ul>
+                </div>
+                <div class="contacts flex">
+                    <a class="icon" href="tel:380971002525">+38(097) 100-25-25</a>
+                    <a href="tel:380971002525">+38(097) 100-25-25</a>
+                </div>
+                <div class="email flex">
+                    <a class="mail" href="#">hataplus@hata.com.ua</a>
+                    <a class="email1 skype" href="">hataplus</a>
+                </div>
             </div>
-        </aside>
-    </div>
-</main>
-
-<footer>
-    <div class="footer">
-        <div class="wrapper flex">
-            <div class="footer-info1 info">
-                <ul>
-                    <li><a href="#">Будинки</a></li>
-                    <li><a href="#">Інфраструктура</a></li>
-                    <li><a href="#">Сервіс</a></li>
-                    <li><a href="#">Новини</a></li>
-                </ul>
-            </div>
-            <div class="footer-info2 info">
-                <ul>
-                    <li><a href="#">Про компанію</a></li>
-                    <li><a href="#">Страхування</a></li>
-                    <li><a href="#">Контакти</a></li>
-                </ul>
-            </div>
-            <div class="contacts flex">
-                <a class="icon" href="tel:380971002525">+38(097) 100-25-25</a>
-                <a href="tel:380971002525">+38(097) 100-25-25</a>
-            </div>
-            <div class="email flex">
-                <a class="mail" href="#">hataplus@hata.com.ua</a>
-                <a class="email1 skype" href="">hataplus</a>
+            <div class="footer-bottom ">
+                <p>© Будівельна компанія “Хата Плюс” 2018.</p>
             </div>
         </div>
-        <div class="footer-bottom ">
-            <p>© Будівельна компанія “Хата Плюс” 2018.</p>
-        </div>
-    </div>
-</footer>
-<script src="script.js"></script>
+    </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
