--- a/contacts.html
+++ b/contacts.html
@@ -24,11 +24,11 @@
                 </div>
                 <div class="menu">
                     <ul class="flex">
-                        <li><a href="/">Головна</a></li>
+                        <li><a href="index.html">Головна</a></li>
                         <li><a href="#">Про компанію</a></li>
-                        <li><a href="#">Наші будівлі</a></li>
+                        <li><a href="price.html">Наші будівлі</a></li>
                         <li><a href="#">Акції</a></li>
-                        <li><a href="#">Контакти</a></li>
+                        <li><a href="contacts.html">Контакти</a></li>
 
                     </ul>
                 </div>
