--- a/contacts.html
+++ b/contacts.html
@@ -70,16 +70,16 @@
                 <div class="office">
                     <p class="main-name">Наш офіс</p>
                     <p class="styles">с. Війтівці, Хмельницька обл. 27500</p>
-                    <a href="#">+38(097) 100-25-25</a>
-                    <a href="#">+38(097) 100-25-25</a>
+                    <a href="#" class="decoration-none">+38(097) 100-25-25</a>
+                    <a href="#" class="decoration-none">+38(097) 100-25-25</a>
                     <a href="#">hataplus@hata.com.ua</a>
                 </div>
                 <div class="consult">
                     <p class="main-name">Консультація</p>
                     <p class="styles">менеджер:</p>
-                    <a href="#">+38(067) 123-10-05</a>
+                    <a href="#" class="decoration-none">+38(067) 123-10-05</a>
                     <p class="styles">менеджер:</p>
-                    <a href="#">+38(067) 123-10-05</a>
+                    <a href="#" class="decoration-none">+38(067) 123-10-05</a>
                 </div>
                 <div class="visit">
                     <p class="main-name">Реквізити</p>
@@ -100,14 +100,14 @@
                 <h2>Форма зворотнього зв’язку</h2>
                 <form action="" method="post">
                     <div class="tel-name">
-                        <label for=""><input type="text" placeholder="Ваше ім’я"></label>
-                        <label for=""><input type="text" placeholder="Телефон"></label>
+                        <label for=""><input type="text" class="styles-input" placeholder="Ваше ім’я"></label>
+                        <label for=""><input type="text" class="styles-input" placeholder="Телефон"></label>
                     </div>
                     <div class="theme-text">
-                        <label for=""><input type="text" placeholder="Тема повідомлення"></label>
+                        <label for=""><input type="text" class="styles-input" placeholder="Тема повідомлення"></label>
                     </div>
                     <div class="textarea">
-                        <textarea name="" id="" cols="30" rows="10" placeholder="Текст"></textarea>
+                        <textarea name="" id="" cols="30" rows="10" class="styles-input" placeholder="Текст"></textarea>
                     </div>
                     <div class="submit-checkbox">
                         <div class="submit-form">
