--- a/contacts.html
+++ b/contacts.html
@@ -124,7 +124,7 @@
     </main>
     <footer>
         <div class="footer">
-            <div class="wrapper flex">
+            <div class="wrapper flex start">
                 <div class="footer-info1 info">
                     <ul>
                         <li><a href="#">Будинки</a></li>
