--- a/price.html
+++ b/price.html
@@ -61,7 +61,7 @@
 
         </div>
     </header>
-    <div class="wrapper">
+    <div class="wrapper main-wrapper">
         <main>
             <h2>Ціни на послуги тимчасового проживання</h2>
 
@@ -191,7 +191,7 @@
 
     <footer>
         <div class="footer">
-            <div class="wrapper flex">
+            <div class="wrapper flex start">
                 <div class="footer-info1 info">
                     <ul>
                         <li><a href="#">Будинки</a></li>
