--- a/contacts.html
+++ b/contacts.html
@@ -107,7 +107,7 @@
                         <label for=""><input type="text" class="styles-input" placeholder="Тема повідомлення"></label>
                     </div>
                     <div class="textarea">
-                        <textarea name="" id="" cols="30" rows="10" class="styles-input" placeholder="Текст"></textarea>
+                        <textarea name="" id="" cols="30" rows="10" class="styles-input text" placeholder="Текст"></textarea>
                     </div>
                     <div class="submit-checkbox">
                         <div class="submit-form">
