--- a/contacts.html
+++ b/contacts.html
@@ -76,9 +76,9 @@
                 </div>
                 <div class="consult">
                     <p class="main-name">Консультація</p>
-                    <p class="styles">менеджер:</p>
+                    <p class="styles manager">менеджер:</p>
                     <a href="#" class="decoration-none">+38(067) 123-10-05</a>
-                    <p class="styles">менеджер:</p>
+                    <p class="styles manager">менеджер:</p>
                     <a href="#" class="decoration-none">+38(067) 123-10-05</a>
                 </div>
                 <div class="visit">
