--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class="company">
-        <div class="wrapper flex">
+        <div class="wrapper flex infos">
             <div class="logo">
                 <a href="/"><img src="img/logo.png" alt=""></a>
             </div>
