--- a/contacts.html
+++ b/contacts.html
@@ -114,8 +114,12 @@
                             <button type="submit">Відправити</button>
                         </div>
                         <div class="checkbox-form">
-                            <input type="checkbox"><label for="">Я бажаю отримувати останні новини</label>
-                        </div>
+                            <input type="checkbox" id="news-checkbox">
+                            <label for="news-checkbox" class="custom-checkbox">
+                              Я бажаю отримувати останні новини
+                            </label>
+                          </div>
+                          
                     </div>
     
                 </form>
