--- a/price.html
+++ b/price.html
@@ -131,7 +131,7 @@
                 </table>
             </div>
 
-            <p class="time">Час заселення з 14-00, виїзд до 12-00.
+            <p class="time timers">Час заселення з 14-00, виїзд до 12-00.
                 Можлива погодинна оренда котеджу (мінімальний час оренди - 5 днів).</p>
             <a class="rules" href="#">Ознайомитись з правилами проживання</a>
 
