--- a/price.html
+++ b/price.html
@@ -63,7 +63,7 @@
     </header>
     <div class="wrapper main-wrapper">
         <main>
-            <h2>Ціни на послуги тимчасового проживання</h2>
+            <h2 class="price_home">Ціни на послуги тимчасового проживання</h2>
 
 
             <p class="time">Кожен котедж оснащений комфортабельними меблями, супутниковим ТБ, душем, туалетом, холодильником,
